--- a/ImageGUI/mainwindow.ui
+++ b/ImageGUI/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>716</width>
-    <height>563</height>
+    <width>799</width>
+    <height>685</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <widget class="QGraphicsView" name="ImageWindow">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>0</y>
       <width>400</width>
       <height>300</height>
@@ -27,8 +27,8 @@
    <widget class="QSlider" name="horizontalSlider">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>340</y>
+      <x>30</x>
+      <y>450</y>
       <width>160</width>
       <height>19</height>
      </rect>
@@ -52,8 +52,8 @@
    <widget class="QSlider" name="horizontalSlider_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>390</y>
+      <x>30</x>
+      <y>500</y>
       <width>160</width>
       <height>19</height>
      </rect>
@@ -65,8 +65,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>320</y>
+      <x>30</x>
+      <y>430</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -78,8 +78,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>370</y>
+      <x>30</x>
+      <y>480</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -91,8 +91,8 @@
    <widget class="QSlider" name="BrightnessSlider">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>39</y>
+      <x>540</x>
+      <y>38</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -116,8 +116,8 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>40</y>
+      <x>560</x>
+      <y>39</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -129,8 +129,8 @@
    <widget class="QSlider" name="ContrastSlider">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>39</y>
+      <x>600</x>
+      <y>38</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -154,8 +154,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>40</y>
+      <x>620</x>
+      <y>39</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -167,14 +167,14 @@
    <widget class="QSlider" name="BlurImageSlider">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>40</y>
+      <x>660</x>
+      <y>39</y>
       <width>20</width>
       <height>221</height>
      </rect>
     </property>
     <property name="minimum">
-     <number>-100</number>
+     <number>1</number>
     </property>
     <property name="maximum">
      <number>100</number>
@@ -189,8 +189,8 @@
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>41</y>
+      <x>680</x>
+      <y>40</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -202,7 +202,7 @@
    <widget class="QSlider" name="verticalSlider_4">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>730</x>
       <y>39</y>
       <width>20</width>
       <height>221</height>
@@ -227,7 +227,7 @@
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>750</x>
       <y>40</y>
       <width>20</width>
       <height>221</height>
@@ -240,8 +240,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>390</y>
+      <x>630</x>
+      <y>460</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -253,8 +253,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>430</y>
+      <x>630</x>
+      <y>500</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -266,8 +266,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>430</y>
+      <x>540</x>
+      <y>500</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -279,8 +279,8 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>390</y>
+      <x>540</x>
+      <y>460</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -292,8 +292,8 @@
    <widget class="QSlider" name="horizontalSlider_5">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>340</y>
+      <x>250</x>
+      <y>450</y>
       <width>160</width>
       <height>19</height>
      </rect>
@@ -305,8 +305,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>370</y>
+      <x>250</x>
+      <y>480</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -318,8 +318,8 @@
    <widget class="QSlider" name="horizontalSlider_6">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>390</y>
+      <x>250</x>
+      <y>500</y>
       <width>160</width>
       <height>19</height>
      </rect>
@@ -331,8 +331,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>320</y>
+      <x>250</x>
+      <y>430</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -344,8 +344,8 @@
    <widget class="QCheckBox" name="checkBox_1">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>470</y>
+      <x>550</x>
+      <y>540</y>
       <width>131</width>
       <height>21</height>
      </rect>
@@ -357,8 +357,8 @@
    <widget class="Line" name="line_5">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>340</y>
+      <x>220</x>
+      <y>450</y>
       <width>3</width>
       <height>61</height>
      </rect>
@@ -370,11 +370,23 @@
    <widget class="QSlider" name="horizontalSlider_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>440</y>
-      <width>91</width>
+      <x>30</x>
+      <y>550</y>
+      <width>151</width>
       <height>19</height>
      </rect>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>30</number>
+    </property>
+    <property name="singleStep">
+     <number>1</number>
+    </property>
+    <property name="value">
+     <number>10</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -383,11 +395,20 @@
    <widget class="QSlider" name="horizontalSlider_4">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>460</y>
-      <width>91</width>
+      <x>30</x>
+      <y>570</y>
+      <width>151</width>
       <height>19</height>
      </rect>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>30</number>
+    </property>
+    <property name="value">
+     <number>10</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -396,11 +417,20 @@
    <widget class="QSlider" name="horizontalSlider_7">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>480</y>
-      <width>91</width>
+      <x>30</x>
+      <y>590</y>
+      <width>151</width>
       <height>19</height>
      </rect>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>30</number>
+    </property>
+    <property name="value">
+     <number>10</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -409,8 +439,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>6</x>
-      <y>440</y>
+      <x>16</x>
+      <y>550</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -422,8 +452,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>6</x>
-      <y>460</y>
+      <x>16</x>
+      <y>570</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -435,8 +465,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>6</x>
-      <y>480</y>
+      <x>16</x>
+      <y>590</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -445,11 +475,11 @@
      <string>B</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_2">
+   <widget class="QCheckBox" name="MoveTogetherCheckBox">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>480</y>
+      <x>200</x>
+      <y>570</y>
       <width>101</width>
       <height>17</height>
      </rect>
@@ -461,8 +491,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>420</y>
+      <x>30</x>
+      <y>530</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -474,11 +504,17 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>16</x>
+      <x>10</x>
       <y>10</y>
       <width>381</width>
       <height>281</height>
      </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
     </property>
     <property name="text">
      <string>Image Preview</string>
@@ -487,8 +523,8 @@
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>350</y>
+      <x>470</x>
+      <y>420</y>
       <width>241</width>
       <height>31</height>
      </rect>
@@ -501,13 +537,265 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;Input file:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
+   <widget class="QRadioButton" name="radioButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>350</y>
+      <width>41</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>3/2</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_2">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>350</y>
+      <width>41</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>4/3</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_3">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>350</y>
+      <width>41</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>16/9</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_4">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>350</y>
+      <width>81</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>3/4 - portrait</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>280</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>50</number>
+    </property>
+    <property name="value">
+     <number>5</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>280</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Neighbor coefficients:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_2">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>310</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>50</number>
+    </property>
+    <property name="value">
+     <number>5</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>310</y>
+      <width>31</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Radius</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>40</y>
+      <width>16</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>B
+R
+I
+G
+H
+T
+E
+S
+S
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>40</y>
+      <width>16</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>C
+O
+N
+T
+R
+A
+S
+T</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>30</y>
+      <width>16</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>B
+L
+U
+R</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_15">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>40</y>
+      <width>16</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>S
+A
+T
+U
+R
+A
+T
+I
+O
+N</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="ApplyCheckBox">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>0</y>
+      <width>131</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Apply each action</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>ImageWindow</zorder>
+   <zorder>horizontalSlider</zorder>
+   <zorder>horizontalSlider_2</zorder>
+   <zorder>label</zorder>
+   <zorder>label_2</zorder>
+   <zorder>BrightnessSlider</zorder>
+   <zorder>line</zorder>
+   <zorder>ContrastSlider</zorder>
+   <zorder>line_2</zorder>
+   <zorder>BlurImageSlider</zorder>
+   <zorder>line_3</zorder>
+   <zorder>verticalSlider_4</zorder>
+   <zorder>line_4</zorder>
+   <zorder>pushButton</zorder>
+   <zorder>pushButton_2</zorder>
+   <zorder>pushButton_3</zorder>
+   <zorder>pushButton_4</zorder>
+   <zorder>horizontalSlider_5</zorder>
+   <zorder>label_3</zorder>
+   <zorder>horizontalSlider_6</zorder>
+   <zorder>label_4</zorder>
+   <zorder>checkBox_1</zorder>
+   <zorder>line_5</zorder>
+   <zorder>horizontalSlider_3</zorder>
+   <zorder>horizontalSlider_4</zorder>
+   <zorder>horizontalSlider_7</zorder>
+   <zorder>label_5</zorder>
+   <zorder>label_6</zorder>
+   <zorder>label_7</zorder>
+   <zorder>MoveTogetherCheckBox</zorder>
+   <zorder>label_8</zorder>
+   <zorder>textEdit</zorder>
+   <zorder>radioButton</zorder>
+   <zorder>radioButton_2</zorder>
+   <zorder>radioButton_3</zorder>
+   <zorder>radioButton_4</zorder>
+   <zorder>label_9</zorder>
+   <zorder>spinBox</zorder>
+   <zorder>label_10</zorder>
+   <zorder>spinBox_2</zorder>
+   <zorder>label_11</zorder>
+   <zorder>label_12</zorder>
+   <zorder>label_13</zorder>
+   <zorder>label_14</zorder>
+   <zorder>label_15</zorder>
+   <zorder>ApplyCheckBox</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>716</width>
+     <width>799</width>
      <height>21</height>
     </rect>
    </property>
