ImageGui ver 0.1.2 - added Histogram

--- a/ImageGUI/mainwindow.ui
+++ b/ImageGUI/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>799</width>
+    <width>938</width>
     <height>685</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>938</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -91,8 +97,8 @@
    <widget class="QSlider" name="BrightnessSlider">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>38</y>
+      <x>690</x>
+      <y>48</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -116,8 +122,8 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>39</y>
+      <x>710</x>
+      <y>49</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -129,8 +135,8 @@
    <widget class="QSlider" name="ContrastSlider">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>38</y>
+      <x>750</x>
+      <y>48</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -154,8 +160,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>39</y>
+      <x>770</x>
+      <y>49</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -167,8 +173,8 @@
    <widget class="QSlider" name="BlurImageSlider">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>39</y>
+      <x>810</x>
+      <y>49</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -189,8 +195,8 @@
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>40</y>
+      <x>830</x>
+      <y>50</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -202,8 +208,8 @@
    <widget class="QSlider" name="verticalSlider_4">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>39</y>
+      <x>880</x>
+      <y>49</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -227,8 +233,8 @@
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
-      <x>750</x>
-      <y>40</y>
+      <x>900</x>
+      <y>50</y>
       <width>20</width>
       <height>221</height>
      </rect>
@@ -371,7 +377,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>550</y>
+      <y>590</y>
       <width>151</width>
       <height>19</height>
      </rect>
@@ -418,7 +424,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>590</y>
+      <y>550</y>
       <width>151</width>
       <height>19</height>
      </rect>
@@ -440,13 +446,13 @@
     <property name="geometry">
      <rect>
       <x>16</x>
-      <y>550</y>
+      <y>590</y>
       <width>41</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>R</string>
+     <string>B</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
@@ -466,13 +472,13 @@
     <property name="geometry">
      <rect>
       <x>16</x>
-      <y>590</y>
+      <y>550</y>
       <width>51</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>B</string>
+     <string>R</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="MoveTogetherCheckBox">
@@ -592,8 +598,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QSpinBox" name="spinBox">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>280</y>
+      <x>820</x>
+      <y>290</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -608,8 +614,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>280</y>
+      <x>710</x>
+      <y>290</y>
       <width>101</width>
       <height>20</height>
      </rect>
@@ -621,8 +627,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QSpinBox" name="spinBox_2">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>310</y>
+      <x>820</x>
+      <y>320</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -637,8 +643,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>310</y>
+      <x>780</x>
+      <y>320</y>
       <width>31</width>
       <height>20</height>
      </rect>
@@ -650,8 +656,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>40</y>
+      <x>680</x>
+      <y>50</y>
       <width>16</width>
       <height>211</height>
      </rect>
@@ -672,8 +678,8 @@ S
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>40</y>
+      <x>730</x>
+      <y>50</y>
       <width>16</width>
       <height>211</height>
      </rect>
@@ -692,8 +698,8 @@ T</string>
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>30</y>
+      <x>800</x>
+      <y>40</y>
       <width>16</width>
       <height>211</height>
      </rect>
@@ -708,8 +714,8 @@ R</string>
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>40</y>
+      <x>870</x>
+      <y>50</y>
       <width>16</width>
       <height>211</height>
      </rect>
@@ -730,8 +736,8 @@ N</string>
    <widget class="QCheckBox" name="ApplyCheckBox">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>0</y>
+      <x>690</x>
+      <y>10</y>
       <width>131</width>
       <height>17</height>
      </rect>
@@ -741,6 +747,35 @@ N</string>
     </property>
     <property name="checked">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="ImageWindow_2">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>0</y>
+      <width>171</width>
+      <height>201</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_16">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>10</y>
+      <width>151</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string>Histogram</string>
     </property>
    </widget>
    <zorder>ImageWindow</zorder>
@@ -789,13 +824,15 @@ N</string>
    <zorder>label_14</zorder>
    <zorder>label_15</zorder>
    <zorder>ApplyCheckBox</zorder>
+   <zorder>ImageWindow_2</zorder>
+   <zorder>label_16</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>799</width>
+     <width>938</width>
      <height>21</height>
     </rect>
    </property>
